# Calculator

./: CMakeLists.txt  calc.c  calc.h  main.c  test.c
.github/workflows/: build.yaml
